--- a/css/index3.css
+++ b/css/index3.css
@@ -29,16 +29,16 @@ color:#3D58A6;
     padding-left: 98px;
     padding-top: 59px;
     padding-bottom: 421px;
+    padding-right: 111px;
     line-height: 20px;
     color: #CFCFCF;
-}
+    }
 .contactA {text-align: center;
   font-family: "BPG Ingiri Arial", sans-serif;
   font-size: 16px;
   color: #000000;
 }
 .Contact{
-         margin-bottom: 272px;
          text-align: center;
          font-family: "BPG Nino Mtavruli Bold", sans-serif;
         font-size: 20px;
@@ -53,9 +53,17 @@ h1{text-align: left;
 .address{
   display: flex;
 }
-main{
+main{ width: 1366px;
+      height: 570px;
+      background-color: #E6E6E6;
   margin-top: 30px;
   margin-bottom: 31px;
+}
+iframe{
+  padding-top: 49px;
+  left: 402px;
+  padding-bottom: 52px;
+  padding-right: 90px;
 }
   .footer{
   margin-left: 30px;
